// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DatasourceColumnsTable matches snapshot on error 1`] = `
<div
  class="datasource-columns-table"
>
  <div
    class="console-table -striped -highlight padded-header"
  >
    <div
      class="ct-table"
      role="grid"
    >
      <div
        class="ct-thead -header"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Column name
            </div>
            <div
              class="ct-resizer"
            />
          </div>
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Data type
            </div>
            <div
              class="ct-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="ct-thead -filters"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ct-tbody"
        style="min-width: 500px;"
      >
        <!-- 25 empty rows -->
      </div>
    </div>
    <div
      class="ct-noData"
    >
      test error
    </div>
  </div>
</div>
`;

exports[`DatasourceColumnsTable matches snapshot on init 1`] = `
<div
  class="datasource-columns-table"
>
  <div
    class="console-table -striped -highlight padded-header"
  >
    <div
      class="ct-table"
      role="grid"
    >
      <div
        class="ct-thead -header"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Column name
            </div>
            <div
              class="ct-resizer"
            />
          </div>
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Data type
            </div>
            <div
              class="ct-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="ct-thead -filters"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ct-tbody"
        style="min-width: 500px;"
      >
        <!-- 25 empty rows -->
      </div>
    </div>
    <div
      class="ct-noData"
    >
      No column data found
    </div>
  </div>
</div>
`;

exports[`DatasourceColumnsTable matches snapshot on loading 1`] = `
<div
  class="datasource-columns-table"
>
  <div
    class="loader"
  >
    <div
      class="loader-logo"
    >
      <svg
        viewBox="0 0 100 100"
      >
        <path
          class="one"
          d="M54.2,69.8h-2.7c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h2.7c11.5,0,23.8-7.4,23.8-23.7
          c0-9.1-6.9-15.8-16.4-15.8H38c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h23.6c5.3,0,10.1,1.9,13.6,5.3c3.5,3.4,5.4,8,5.4,13.1
          c0,6.6-2.3,13-6.3,17.7C69.5,66.8,62.5,69.8,54.2,69.8z"
        />
        <path
          class="two"
          d="M55.7,59.5h-26c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h26c7.5,0,11.5-5.8,11.5-11.5
            c0-4.2-3.2-7.3-7.7-7.3h-26c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h26c5.9,0,10.3,4.3,10.3,9.9c0,3.7-1.3,7.2-3.7,9.8
            C63.5,58,59.9,59.5,55.7,59.5z"
        />
        <path
          class="three"
          d="M27.2,38h-6.3c-0.7,0-1.3-0.6-1.3-1.3s0.6-1.3,1.3-1.3h6.3c0.7,0,1.3,0.6,1.3,1.3S27.9,38,27.2,38z"
        />
        <path
          class="four"
          d="M45.1,69.8h-5.8c-0.7,0-1.3-0.6-1.3-1.3c0-0.7,0.6-1.3,1.3-1.3h5.8c0.7,0,1.3,0.6,1.3,1.3
            C46.4,69.2,45.8,69.8,45.1,69.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`DatasourceColumnsTable matches snapshot on no data 1`] = `
<div
  class="datasource-columns-table"
>
  <div
    class="console-table -striped -highlight padded-header"
  >
    <div
      class="ct-table"
      role="grid"
    >
      <div
        class="ct-thead -header"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Column name
            </div>
            <div
              class="ct-resizer"
            />
          </div>
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Data type
            </div>
            <div
              class="ct-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="ct-thead -filters"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ct-tbody"
        style="min-width: 500px;"
      >
        <!-- 25 empty rows -->
      </div>
    </div>
    <div
      class="ct-noData"
    >
      No column data found
    </div>
  </div>
</div>
`;

exports[`DatasourceColumnsTable matches snapshot on some data 1`] = `
<div
  class="datasource-columns-table"
>
  <div
    class="console-table -striped -highlight padded-header"
  >
    <div
      class="ct-table"
      role="grid"
    >
      <div
        class="ct-thead -header"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Column name
            </div>
            <div
              class="ct-resizer"
            />
          </div>
          <div
            class="ct-th ct-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="ct-resizable-header-content"
            >
              Data type
            </div>
            <div
              class="ct-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="ct-thead -filters"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr"
          role="row"
        >
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="ct-th"
            role="columnheader"
            style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="bp6-input-group generic-filter-input hide-icon"
            >
              <span
                class="bp6-input-left-container"
              >
                <span
                  class="bp6-popover-target"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="bp6-button bp6-minimal filter-mode-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp6-icon bp6-icon-search"
                    >
                      <svg
                        data-icon="search"
                      />
                    </span>
                  </button>
                </span>
              </span>
              <input
                class="bp6-input"
                style="padding-left: 0px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ct-tbody"
        style="min-width: 500px;"
      >
        <div
          class="ct-tr-group"
          role="rowgroup"
        >
          <div
            class="ct-tr -odd"
            role="row"
          >
            <div
              class="ct-td padded"
              role="gridcell"
              style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            >
              channel
            </div>
            <div
              class="ct-td padded"
              role="gridcell"
              style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            >
              VARCHAR
            </div>
          </div>
        </div>
        <div
          class="ct-tr-group"
          role="rowgroup"
        >
          <div
            class="ct-tr -even"
            role="row"
          >
            <div
              class="ct-td padded"
              role="gridcell"
              style="flex: 300 0 auto; width: 300px; max-width: 300px;"
            >
              page
            </div>
            <div
              class="ct-td padded"
              role="gridcell"
              style="flex: 200 0 auto; width: 200px; max-width: 200px;"
            >
              VARCHAR
            </div>
          </div>
        </div>
        <!-- 23 empty rows -->
      </div>
    </div>
  </div>
</div>
`;
